<resources>
    <string name="app_name">MaterialDesignCource</string>

    <string name="hint_name">Enter your name</string>
    <string name="login">Войти</string>
    <string name="exit">Закрыть</string>
    <string name="title_activity_navi_drawer">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Material Design</string>
    <string name="nav_header_subtitle">Geekbrains university</string>
    <string name="nav_header_desc">Course of Material design</string>

    <string name="action_settings">Settings</string>

    <string name="menu_fruit">Fruit</string>
    <string name="menu_vegetables">Vegetables</string>
    <string name="menu_nature">Nature</string>
    <string name="custom_text">Customization!</string>

    <string name="fruit_text">
           Фру́кт (лат. fructus — плод) — сочный съедобный плод дерева или кустарника. Фрукты являются важной составляющей пищи человека и многих животных.
        В древнерусском языке слова «фрукт» не существовало, оно появилось лишь в 1705 году, это заимствование через польское fruct из латинского fructus;
        любые плоды назывались овощами или овоштами.
        «Фрукт» — термин не ботанический, а бытовой и хозяйственный. В хозяйстве съедобные растения и съедобные части растений делят на фрукты,
        овощи, орехи, зерновые культуры и т. д. В бытовом понимании ягода — тоже сочный плод. Фрукт отличается от ягоды в основном размером,
        в процессе еды его целиком в рот не кладут и двумя пальцами не берут. В некоторых языках понятие «фрукт» не выделяется из понятия «плод»,
        обозначающее орган покрытосеменных растений, содержащий семена, образовавшийся из завязи цветка, независимо от съедобности и сочности.
    </string>
    <string name="vegetables_text">
        О́вощи — кулинарный термин, обозначающий съедобную часть (например, плод или клубень) некоторых растений, а также всякую твёрдую растительную пищу,
        за исключением фруктов, круп, грибов, орехов и съедобных водорослей. Кулинарный термин «овощ» может применяться к съедобным плодам,
        которые с точки зрения ботаники являются ягодами. Овощи являются важной частью рациона человека. Источником овощей в подавляющем большинстве
        случаев служат овощные культуры, возделываемые сельскохозяйственными предприятиями в промышленных масштабах. Выращиванием овощей занимается
        овощеводство.
    </string>
    <string name="nature_text">
        Приро́да — материальный мир Вселенной, в сущности — основной объект изучения естественных наук. В быту слово «природа» часто употребляется
        в значении естественная среда обитания (всё, что не создано человеком).
        Земля — единственная известная в настоящий момент планета, на которой есть жизнь.
        Её природные особенности являются предметом многих научных исследований. Она является третьей по счёту от Солнца планетой
        Солнечной системы и крупнейшей по диаметру, массе и плотности среди планет земной группы. Основные климатические особенности
        Земли заключаются в наличии двух больших полярных регионов, двух относительно узких умеренных зон и одного широкого экваториально-тропического
        региона. Количество осадков на планете варьируется в широких пределах в зависимости от местоположения и колеблется от миллиметра до нескольких
        метров осадков в год. Около 71% поверхности Земли занимает океан. Остальная часть состоит из континентов и островов, причём бо́льшая часть суши,
        населённой людьми, находится в северном полушарии.
    </string>
    <string name="apple_desc">
        Яблоко - сочный плод яблони, который употребляется в пищу в свежем виде,
        служит сырьём в кулинарии и для приготовления напитков.
        Наибольшее распространение получила яблоня домашняя, реже выращивают яблоню сливолистную. Размер красных, зелёных или жёлтых шаровидных
        плодов 5—13 см в диаметре. Происходит из Центральной Азии, где до сих пор произрастает дикорастущий предок яблони домашней — яблоня Сиверса.
    </string>

    <string name="pear_desc">
        Слово груша в русских письменных источниках встречается с XII века в форме хруша. В XVII веке вместо «груша» употреблялось слово «дуля»,
        заимствованное из польского языка от dula.
        Плод, как правило, — вытянутой формы с расширением в нижней части, есть сорта с шаровидными плодами. Плоды груш отличаются характерной
        зернистой мякотью из-за наличия каменистых клеток (склереид. Груша пришла к нам из доисторической эпохи. Родина её точно не установлена.
        Культивированная груша происходит, по-видимому, из Древней Греции (за 1000 лет до н. э.).
    </string>
    <string name="pineapple_desc">
         Ананас - многолетнее травянистое растение, вид рода Ананас (Ananas) семейства Бромелиевые (Bromeliaceae). Ананас настоящий представлен
        в культуре многочисленным разнообразием сортов не только в Южной Америке, где растут представители рода Ананас, но и по всем тропическим
        странам всего земного шара.
    </string>
    <string name="watermelon">
        Арбуз обыкновенный (лат. Citrullus lanatus) — однолетнее травянистое растение, вид рода Арбуз (Citrullus) семейства Тыквенные (Cucurbitaceae).
        Бахчевая культура. Плод — тыквина, шаровидной, овальной, уплощённой или цилиндрической формы; окраска коры от белой и жёлтой до тёмно-зелёной
        с рисунком в виде полосок и пятен; мякоть розовая, красная, малиновая, реже — белая и жёлтая.
    </string>
    <string name="apple">Яблоко</string>

    <string name="cucumber_desc">
        Огурец обыкновенный, или Огурец посевной (лат. Cucumis sativus), — однолетнее травянистое растение, вид рода Огурец (Cucumis) семейства
        Тыквенные (Cucurbitaceae), овощная культура.
        Плод — многосемянный, сочный, изумрудно-зелёный, пупырчатый. Строение плода характерно для семейства тыквенных и в ботанической литературе
        определяется как тыквина. Он может иметь различную форму и размер (в зависимости от сорта). В кулинарном отношении огурцы традиционно относят
        к овощам.
    </string>

    <string name="tomato_desc">
        Томат или помидор (лат. Solanum lycopersicum) — однолетнее или многолетнее травянистое растение, вид рода Паслён (Solanum)семейства Паслёновые
        (Solanaceae). Возделывается как овощная культура.
        Томат восходит к ацтекскому названию растения «томатль». В русский язык слово попало из французского (tomate). «Помидор», другой популярный
        вариант названия овоща, происходит от итал. pomo doro — «золотое яблоко». В русском языке используются оба варианта названия (причем «помидор»
        встречается чаще как в изданной литературе, так и в поисковых запросах интернет-пользователей).
    </string>

    <string name="potato_desc">
        Картофель, или Паслён клубненосный (лат. Solanum tuberosum), — вид многолетних клубненосных травянистых растений из рода Паслён (Solanum)
        семейства Паслёновые (Solanaceae). Клубни картофеля являются важным пищевым продуктом. Плоды ядовиты в связи с содержанием в них соланина.
        Русское слово «картофель» произошло от нем. Kartoffel, которое, в свою очередь, произошло от итал. tartufo, tartufolo — трюфель.
    </string>

    <string name="pumpkin_desc">
        Тыква (лат. Cucurbita) — род травянистых растений семейства Тыквенные (Cucurbitaceae).
        Под словом «тыква» в России обычно понимаются виды Тыква обыкновенная (Cucurbita pepo) и Тыква гигантская (Cucurbita maxima),
        широко распространённые и культивируемые как пищевое и кормовое растение.
        Русское слово «тыква», по версии словаря Успенского, возможно происходит от праславянского *tyky из *tykati — «жиреть, толстеть».
        Однако, даётся и вторая версия: от греческого «sikuos» — «огурец». Также эти два варианта отражены в словаре Фасмера.
    </string>

    <string name="lake_desc">
        Озеро — компонент гидросферы, представляющий собой естественно возникший водоём, заполненный в пределах озёрной чаши (озёрного ложа) водой
        и не имеющий непосредственного соединения с морем (океаном). Озёра являются предметом изучения науки лимнологии. Всего в мире насчитывается
        около 5 млн озёр.
    </string>

    <string name="field_desc">
        Поле — безлесный, обычно достаточно ровный и обширный участок земли, территория которого используется для сельскохозяйственных целей.
        Один из основных видов сельскохозяйственных угодий наряду с лугами, садами и выгонами.
        Слово поле произошло от общеславянского *polje «открытое, свободное (от леса) место», которое произведено от *polъ «открытый, свободный, пустой».
    </string>

    <string name="mount_desc">
        Горы — сильно расчленённые части суши, значительно, на 500 метров и более, приподнятые над прилегающими равнинами. От равнин горы отделены
        либо напрямую подножием склона, либо предгорьями. Горы могут быть линейно вытянутыми или дугообразными с параллельным, решётчатым, радиальным,
        перистым, кулисным или ветвистым рисунком расчленения. Различают высокогорья, среднегорья и низкогорья.
    </string>

    <string name="wood_desc">
        Леса занимают около трети площади суши, площадь леса на Земле составляет 38 млн км кв. Из них 264 млн га, или 7 %, посажены человеком, к началу
        XXI века человек уничтожил около 50 % площадей лесов, ранее существовавших на планете. Половина лесной зоны принадлежит тропическим лесам.
        Площади, занятые деревьями с сомкнутостью крон менее 0,2—0,3, считаются редколесьем.
    </string>
    <string name="menu_vegetables_all">Овощи</string>
    <string name="menu_potato">Картошка</string>
    <string name="menu_tomato">Помидоры</string>
    <string name="action_theme1">Тема1</string>
    <string name="action_theme2">Тема2</string>
    <string name="action_theme3">Тема3</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>

</resources>
