<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_theme1"
        android:orderInCategory="100"
        android:title="@string/action_theme1"
        android:icon="@drawable/ic_orange_round_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme2"
        android:orderInCategory="100"
        android:title="@string/action_theme2"
        android:icon="@drawable/ic_gray_round_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme3"
        android:orderInCategory="100"
        android:title="@string/action_theme3"
        android:icon="@drawable/ic_green_round_24dp"
        app:showAsAction="ifRoom" />

</menu>
