<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fruit">

    <fragment
        android:id="@+id/nav_fruit"
        android:name="ru.leonov.hw.FruitFragment"
        android:label="@string/menu_fruit"
        tools:layout="@layout/fragment_fruit" />

    <fragment
        android:id="@+id/nav_vegetables"
        android:name="ru.leonov.hw.VegetablesFragment"
        android:label="@string/menu_vegetables"
        tools:layout="@layout/fragment_vegetables" />

    <fragment
        android:id="@+id/nav_nature"
        android:name="ru.leonov.hw.NatureFragment"
        android:label="@string/menu_nature"
        tools:layout="@layout/fragment_nature" />

</navigation>